View Issue Details

IDProjectCategoryView StatusLast Update
0024206Open CASCADEOCCT:Data Exchangepublic2013-12-19 13:58
ReportergkaAssigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformWindowsOSVC++ 2010 
Product Version6.6.0 
Target Version6.7.0Fixed in Version6.7.0 
Summary0024206: Exception is raised in the STEP loopback tests.
DescriptionException is raised in the STEP loopback tests due to not initialized variables in ShapeFix_EdgeProjAux and ShapeAnalysis_Curve classes.
Steps To ReproduceFollowing tests are failed only in release mode:
de step_2 P4
de step_3 A4 B8 C8
de step_4 I2
TagsNo tags attached.
Test case numberde step_2(005) P4; de step_3(006) A4,B8,C8; de step_4(007) I2

Activities

gka

2013-09-27 17:57

developer   ~0025784

Branch CR24206 is ready to be reviewed.

abv

2013-10-07 07:00

manager   ~0025918

I observe these fails on OCCT built with vc10 (except is that in group step_3 I have B9 failed, not B8)

abv

2013-10-07 17:38

manager   ~0025943

Reviewed, please test (branch CR24206_1, rebased on current master and squashed to one commit)

mkv

2013-10-08 15:42

tester   ~0025962

Dear BugMaster,

Branch CR24206_1 (and products from GIT master) was compiled on Linux and Windows platforms and tested.
SHA-1: 4798af6da957933e72901187ffb5fc68ab962b28

Number of compiler warnings:

occt component :
Linux: 428 (424 on master) - New additional warnings!
Windows: 10 (9 on master) - New additional warning!

products component :
Linux: 189 (189 on master)
Windows: 287 (287 on master)

Regressions/Differences:
http://occt-tests/CR24206-1-master-occt/Debian60-64/bugs/xde/bug22805.html
bugs xde(005) bug22805: FAILED

abv

2013-10-08 16:12

manager   ~0025965

Please provide list of new warnings

mkv

2013-10-09 10:40

tester   ~0025983

Linux:

http://jenkins-test-02.nnov.opencascade.com:8080/user/mnt/my-views/view/A_mnt_warnings/job/mnt-CR24206_1-master_build_occt_linux/1/warnings14Result/?
../../../../inc - 3 additional warnings
../../../../src/ShapeAnalysis - 1 new warning

Windows:

http://jenkins-test-02.nnov.opencascade.com:8080/user/mnt/my-views/view/A_mnt_warnings/job/mnt-CR24206_1-master_build_occt_windows/1/warnings27Result/package.-1532010335/
qanewmodtopope_glue_wire.cxx:982, MSBuild, Priority: Normal
unreachable code

mkv

2013-10-09 11:21

tester   ~0025985

Linux:

ShapeAnalysis_Curve.cxx:182, GNU Compiler 4 (gcc), Priority: Normal
unused variable ‘distmin’

gka

2013-10-14 10:28

developer   ~0026059

Branch CR24206_1 is ready to be reviewed.

abv

2013-10-14 19:18

manager   ~0026075

No remarks, please test

mkv

2013-10-16 10:42

tester   ~0026098

Dear BugMaster,

Branch CR24206_1 (and products from GIT master) was compiled on Linux and Windows platforms and tested.
SHA-1: e5f7e1e4cf65747013ec42118552334f975bf9d9

Number of compiler warnings:

occt component :
Linux: 370 (370 on master)

Windows: 7 (6 on master)
http://jenkins-test-02.nnov.opencascade.com:8080/user/mnt/my-views/view/A_mnt_warnings/job/mnt-CR24206_1-master_build_occt_windows/1/warnings27Result/package.-1346939154/
New additional warning:
ShapeFix_EdgeProjAux.cxx:392, MSBuild, Priority: Normal
'isClosed' : local variable is initialized but not referenced


products component :
Linux: 189 (191 on master)
Windows: 287 (287 on master)

Regressions/Differences:
http://jenkins-test-02.nnov.opencascade.com:8080/user/mnt/my-views/view/CR24206_1/job/mnt-CR24206_1-master_products_tests_linux_start/label=Debian60-64,tests_group=sat,tests_subgroup=002/2/HTML_Report/?
http://jenkins-test-02.nnov.opencascade.com:8080/user/mnt/my-views/view/CR24206_1/job/mnt-CR24206_1-master_products_tests_windows_start/label=windows_test,tests_group=sat,tests_subgroup=002/2/HTML_Report/?
sat doc_2(002) A4, A5, A9, F7, H1

Testing cases:
http://occt-tests/CR24206-1-master-occt/Debian60-64/de/
http://occt-tests/CR24206-1-master-occt/Windows-32-VC9/de/
de step_2(005) P4; de step_3(006) A4,B8,C8; de step_4(007) I2 - OK.

Testing on Linux:
Total MEMORY difference: 353213064 / 353452256
Total CPU difference: 40340.010000000126 / 43493.42000000097

Testing on Windows:
Total MEMORY difference: 407446124 / 411317668
Total CPU difference: 31965.453125 / 37715.5625

There are not differences in images found by testdiff.

gka

2013-10-21 12:06

developer   ~0026155

Warning "ShapeFix_EdgeProjAux.cxx:392, MSBuild, Priority: Normal
'isClosed' : local variable is initialized but not referenced" was corrected.

Result of test cases sat doc_2(002) A4, A5, A9, F7, H1 are the same as in current master of Products.

mkv

2013-10-21 13:52

tester   ~0026162

Last edited: 2013-10-21 13:53

Dear gka,
could you please check branch CR24206_1.
Last commit was write on 14/10/2013, but last testing was on 16/10/2013.

gka

2013-10-21 14:25

developer   ~0026166

Modification is put in branch CR24206_1

mkv

2013-10-22 09:40

tester   ~0026188

Last edited: 2013-10-24 11:49

Dear BugMaster,

Branch CR24206_1 (and products from GIT master) was compiled on Linux and Windows platforms and tested.
SHA-1: c70bd1f3d160edca56685869d5f154b037730cb5

Number of compiler warnings:

occt component :
Linux: 368 (368 on master)
Windows: 6 (6 on master)

products component :
Linux: 190 (190 on master)
Windows: 287 (287 on master)

Regressions/Differences:
sat doc_2(002) A4, A5, A9, F7, H1 - these test cases are corrected

Testing cases:
http://occt-tests/CR24206-1-master-occt/Debian60-64/de/
http://occt-tests/CR24206-1-master-occt/Windows-32-VC9/de/
de step_2(005) P4; de step_3(006) A4,B8,C8; de step_4(007) I2 - OK.

Testing on Linux:
Total MEMORY difference: 353476912 / 353823372
Total CPU difference: 42954.93000000104 / 42954.25000000077

Testing on Windows:
Total MEMORY difference: 407566572 / 407073520
Total CPU difference: 33366.921875 / 37415.03125

There are not differences in images found by testdiff.

mkv

2013-10-22 09:41

tester   ~0026189

Dear BugMaster,

Test cases
sat doc_2(002) A4, A5, A9, F7, H1
are corrected and pushed in new git branch CR24206_Products.

Related Changesets

occt: master 62f22593

2013-10-24 07:48:44

gka


Committer: bugmaster Details Diff
0024206: Exception is raised in the STEP loopback tests.

Fixed several cases of potentially uninitialized variables in Shape Healing.
Corrections to avoid warning for unused variable distmini and to avoid regression for case bug22805
Affected Issues
0024206
mod - src/ShapeAnalysis/ShapeAnalysis_Curve.cxx Diff File
mod - src/ShapeFix/ShapeFix_EdgeProjAux.cxx Diff File

Issue History

Date Modified Username Field Change
2013-09-27 14:25 gka New Issue
2013-09-27 14:25 gka Assigned To => gka
2013-09-27 17:56 gka Status new => assigned
2013-09-27 17:57 gka Note Added: 0025784
2013-09-27 17:57 gka Assigned To gka => abv
2013-09-27 17:57 gka Status assigned => resolved
2013-10-07 07:00 abv Note Added: 0025918
2013-10-07 17:38 abv Note Added: 0025943
2013-10-07 17:38 abv Assigned To abv => bugmaster
2013-10-07 17:38 abv Status resolved => reviewed
2013-10-08 12:02 mkv Assigned To bugmaster => mkv
2013-10-08 15:42 mkv Note Added: 0025962
2013-10-08 15:43 mkv Assigned To mkv => user578
2013-10-08 15:43 mkv Status reviewed => assigned
2013-10-08 16:12 abv Note Added: 0025965
2013-10-08 16:12 abv Assigned To user578 => mkv
2013-10-08 16:12 abv Status assigned => feedback
2013-10-09 10:40 mkv Note Added: 0025983
2013-10-09 10:40 mkv Assigned To mkv => gka
2013-10-09 11:21 mkv Note Added: 0025985
2013-10-14 10:28 gka Note Added: 0026059
2013-10-14 10:28 gka Assigned To gka => abv
2013-10-14 10:28 gka Status feedback => resolved
2013-10-14 19:18 abv Note Added: 0026075
2013-10-14 19:18 abv Assigned To abv => bugmaster
2013-10-14 19:18 abv Status resolved => reviewed
2013-10-15 16:54 mkv Assigned To bugmaster => mkv
2013-10-16 10:42 mkv Note Added: 0026098
2013-10-16 10:43 mkv Test case number => de step_2(005) P4; de step_3(006) A4,B8,C8; de step_4(007) I2
2013-10-16 10:43 mkv Assigned To mkv => gka
2013-10-16 10:43 mkv Status reviewed => assigned
2013-10-21 12:06 gka Note Added: 0026155
2013-10-21 12:06 gka Status assigned => resolved
2013-10-21 12:06 gka Status resolved => reviewed
2013-10-21 13:52 mkv Note Added: 0026162
2013-10-21 13:52 mkv Status reviewed => feedback
2013-10-21 13:53 mkv Note Edited: 0026162
2013-10-21 14:25 gka Note Added: 0026166
2013-10-21 14:25 gka Status feedback => reviewed
2013-10-21 15:13 mkv Assigned To gka => mkv
2013-10-22 09:40 mkv Note Added: 0026188
2013-10-22 09:41 mkv Note Added: 0026189
2013-10-22 09:42 mkv Assigned To mkv => bugmaster
2013-10-22 09:42 mkv Status reviewed => tested
2013-10-24 11:49 mkv Note Edited: 0026188
2013-10-25 14:42 bugmaster Changeset attached => occt master 62f22593
2013-10-25 14:42 bugmaster Status tested => verified
2013-10-25 14:42 bugmaster Resolution open => fixed
2013-12-19 13:51 bugmaster Status verified => closed
2013-12-19 13:58 bugmaster Fixed in Version => 6.7.0